develop: add docker compose
